[tool.poetry]
name = "ocp-healthcheck-vsphere"
version = "0.1.0"
description = ""
authors = ["Luiz Gustavo Rodrigues de Oliveira <lgro1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^6.5.0"
kubernetes = "^25.3.0"
jpterm = "^0.0.5"
ansible-lint = "^6.8.6"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
